# AI-Engineer-Interview-Univeristy

./: .gitignore  CLAUDE.md  LICENSE  README.md
AI/deep-learning/: README.md
AI/linear-algebra/: README.md
AI/linear-algebra/eigenvalues-eigenvectors/: note.md  practice.py  qas.md  solution.py
AI/linear-algebra/matrix-decomposition/: note.md  practice.py  qas.md  solution.py
AI/linear-algebra/matrix-rank/: note.md  practice.py  qas.md  solution.py
AI/linear-algebra/matrix-transpose-inverse/: note.md  practice.py  qas.md  solution.py
AI/linear-algebra/matrix-vector-dot-product/: note.md  practice.py  qas.md  solution.py
AI/linear-algebra/orthogonality-projections/: note.md  practice.py  qas.md  solution.py
AI/linear-algebra/svd/: note.md  practice.py  qas.md  solution.py
AI/linear-algebra/vector-norms/: note.md  practice.py  qas.md  solution.py
AI/machine-learning/: README.md
AI/machine-learning/clustering/birch-clustering/: note.md  practice.py  qas.md  solution.py
AI/machine-learning/clustering/dbscan/: note.md  practice.py  qas.md  solution.py
AI/machine-learning/clustering/elbow-method-k-selection/: note.md  practice.py  qas.md  solution.py
AI/machine-learning/clustering/gaussian-mixture-model-em/: note.md  practice.py  (+2 more)
AI/projects/: README.md
AI/projects/transformer-from-scratch/: pyproject.toml  test_trasnformer.py  trasnformer.py
DSA/array/: note.md  pratice.py  qas.md  solution.py
DSA/hash-table/: note.md  practice.py  qas.md  solution.py
DSA/heap/: note.md  practice.py  qas.md  solution.py
python/: object.md  pointer.md
(+450 files in other folders)
