[project]
name = "transformer-from-scratch"
version = "0.1.0"
description = "Transformer implemented from scratch, for interview study."
requires-python = ">=3.11"
dependencies = [
    "torch",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

# Discover tests next to source: test_*.py in this project folder.
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["."]
